--- a/docroot/themes/custom/site/src/scss/custom/components/_loader.scss
+++ b/docroot/themes/custom/site/src/scss/custom/components/_loader.scss
@@ -1,8 +1,8 @@
 @import 'page-layout';
-@import 'social-icon';
+@import 'breadcrumb';
 @import 'header';
 @import 'navigation';
-@import 'pagination';
-@import 'local-action';
 @import 'footer';
 @import 'card';
+@import 'button';
+@import 'angled-background';
