--- a/docroot/themes/custom/site/src/scss/variables/_custom.scss
+++ b/docroot/themes/custom/site/src/scss/variables/_custom.scss
@@ -1,4 +1,8 @@
 $text-muted: #ADA2A4;
-$border-color: #ddd;
+$border-color: #e6e7e7;
 $body-bg-secondary: #fff;
 $body-bg-tertiary: #5c4b51;
+
+$paragraph-inner-sizing: 80px;
+$paragraph-inner-sizing-top: 30px;
+$paragraph-inner-sizing-bottom: 110px;
