--- a/docroot/themes/custom/site/src/scss/custom/components/_footer.scss
+++ b/docroot/themes/custom/site/src/scss/custom/components/_footer.scss
@@ -16,13 +16,13 @@ $footer-background-color: $brand-primary;
 $footer-bottom-background-color: #fff;
 
 // Responsive
-$xs-footer-top-padding-bottom: 50px;
-$sm-footer-top-padding-bottom: 70px;
-$md-footer-top-padding-bottom: 85px;
+$xs-footer-top-padding-top-bottom: 20px;
+$sm-footer-top-padding-top-bottom: 25px;
+$md-footer-top-padding-top-bottom: 30px;
 
-$xs-footer-bottom-padding-top-bottom: 5px;
-$sm-footer-bottom-padding-top-bottom: 8px;
-$md-footer-bottom-padding-top-bottom: 10px;
+$xs-footer-bottom-padding-top-bottom: 15px;
+$sm-footer-bottom-padding-top-bottom: 45px;
+$md-footer-bottom-padding-top-bottom: 55px;
 
 // --------------------------------------------------
 // Styling
@@ -30,10 +30,43 @@ $md-footer-bottom-padding-top-bottom: 10px;
 
 // Footer
 .footer {
-  background-color: $footer-background-color;
-  padding: 0 !important;
   border-top: 0;
-  @include angled_background(before);
+  padding-top: 50px;
+
+  .footer-inner {
+    @include angled_background($brand-primary);
+    padding-bottom: 0;
+  }
+  .block,
+  nav {
+
+    h1,
+    h2,
+    h3 {
+
+      &,
+      &.block-title {
+        font-weight: $headings-font-weight-bold;
+        font-size: $font-size-h3;
+        color: #fff;
+        text-transform: uppercase;
+        padding: 18px 0;
+        margin: 0;
+      }
+    }
+  }
+
+  p {
+    color: #fff;
+  }
+
+  a {
+
+    &,
+    &:hover {
+      color: #fff;
+    }
+  }
 
   .menu {
 
@@ -41,15 +74,15 @@ $md-footer-bottom-padding-top-bottom: 10px;
 
       a {
         padding: 6px 0;
-        color: $text-color;
 
         &,
         &:hover {
           background-color: transparent;
         }
 
+        &,
         &:hover {
-          color: $headings-color;
+          color: #fff;
         }
       }
 
@@ -62,33 +95,36 @@ $md-footer-bottom-padding-top-bottom: 10px;
       }
     }
   }
-
-  .region-footer-top-first,
-  .region-footer-top-second {
-
-    .block-title {
-      font-weight: $headings-font-weight-bold;
-    }
-  }
-
-  .block-title {
-    margin: 0;
-    margin-bottom: 25px;
-  }
 }
 
 .footer-bottom-outer {
+  border-top: 1px solid #00ace4;
 
   p {
     margin: 0;
     padding: 0;
     text-transform: uppercase;
-    color: #fff;
   }
 
-  .footer-bottom-copyright {}
+  .footer-bottom-copyright {
+    @include line-height(26px); // Same height as social icon
+  }
 
-  .footer-bottom-social {}
+  .footer-bottom-social {
+
+    a {
+
+      &,
+      &:hover {
+        font-size: 26px;
+        color: #fff;
+      }
+    }
+
+    .list-inline {
+      margin-bottom: 0;
+    }
+  }
 }
 
 // --------------------------------------------------
@@ -106,7 +142,7 @@ $md-footer-bottom-padding-top-bottom: 10px;
   .footer {}
 
   .footer-top-outer {
-    padding-bottom: $xs-footer-top-padding-bottom 0;
+    padding: $xs-footer-top-padding-top-bottom;
   }
 
   .footer-bottom-outer {
@@ -128,7 +164,7 @@ $md-footer-bottom-padding-top-bottom: 10px;
   .footer {}
 
   .footer-top-outer {
-    padding-bottom: $sm-footer-top-padding-bottom 0;
+    padding: $sm-footer-top-padding-top-bottom;
   }
 
   .footer-bottom-outer {
@@ -150,7 +186,7 @@ $md-footer-bottom-padding-top-bottom: 10px;
   .footer {}
 
   .footer-top-outer {
-    padding-bottom: $md-footer-top-padding-bottom 0;
+    padding: $md-footer-top-padding-top-bottom;
   }
 
   .footer-bottom-outer {
