--- a/docroot/themes/custom/site/src/scss/custom/entities/paragraph/type/_1-column-action-centered.scss
+++ b/docroot/themes/custom/site/src/scss/custom/entities/paragraph/type/_1-column-action-centered.scss
@@ -1,9 +1,9 @@
 // |--------------------------------------------------------------------------
-// | Action links
+// | 1 column action - centered
 // |--------------------------------------------------------------------------
 // |
 // | This file contains styles for the following:
-// | - .action-links
+// | - .paragraph--type--_-column-action-centered
 // |
 
 // --------------------------------------------------
@@ -14,27 +14,19 @@
 // Styling
 // --------------------------------------------------
 
-// Action links
-.action-links {
-  margin-top: 0;
-  @extend .text-right;
-  @extend .list-inline;
+// 1 column action - centered
+.paragraph--type--_-column-action-centered {
+  text-align: center;
 
-  li {
-    padding: 0;
-    margin-right: 5px;
-
-    &:last-child {
-      margin-right: 0;
-    }
+  .field--name-field-heading {
+    text-align: left;
+    margin-bottom: 100px;
   }
 
-  .btn {
+  .field--name-field-description {
 
-    &:after {
-      font-family: FontAwesome;
-      content: $fa-var-plus-circle;
-      margin-left: 5px;
+    + .field--name-field-link {
+      margin-top: 40px;
     }
   }
 }
@@ -50,76 +42,76 @@
 // Mobile - and up
 @include media-breakpoint-up(xs) {
 
-  // Action links
-  .action-links {}
+  // 1 column action - centered
+  .paragraph--type--_-column-action-centered {}
 }
 
 // Mobile - only
 @include media-breakpoint-only(xs) {
 
-  // Action links
-  .action-links {}
+  // 1 column action - centered
+  .paragraph--type--_-column-action-centered {}
 }
 
 // Tablet - and up
 @include media-breakpoint-up(sm) {
 
-  // Action links
-  .action-links {}
+  // 1 column action - centered
+  .paragraph--type--_-column-action-centered {}
 }
 
 // Tablet - only
 @include media-breakpoint-only(sm) {
 
-  // Action links
-  .action-links {}
+  // 1 column action - centered
+  .paragraph--type--_-column-action-centered {}
 }
 
 // Desktop - and up
 @include media-breakpoint-up(md) {
 
-  // Action links
-  .action-links {}
+  // 1 column action - centered
+  .paragraph--type--_-column-action-centered {}
 }
 
 // Desktop - only
 @include media-breakpoint-only(md) {
 
-  // Action links
-  .action-links {}
+  // 1 column action - centered
+  .paragraph--type--_-column-action-centered {}
 }
 
 // Large desktop - and up
 @include media-breakpoint-up(lg) {
 
-  // Action links
-  .action-links {}
+  // 1 column action - centered
+  .paragraph--type--_-column-action-centered {}
 }
 
 // Print
 @media print {
 
-  // Action links
-  .action-links {}
+  // 1 column action - centered
+  .paragraph--type--_-column-action-centered {}
 }
 
 // Touch
 .touchevents {
 
-  // Action links
-  .action-links {}
+  // 1 column action - centered
+  .paragraph--type--_-column-action-centered {}
 }
 
 // No touch
 .no-touchevents {
 
-  // Action links
-  .action-links {}
+  // 1 column action - centered
+  .paragraph--type--_-column-action-centered {}
 }
 
 // --------------------------------------------------
 // Mixins
 // --------------------------------------------------
 
-// Action links mixin
-@mixin action-mixin-links() {}
+// 1 column action - centered mixin
+@mixin paragraph-type-mixin-column-action-centered() {}
